' SPDX-License-Identifier: MIT
@startuml

'Hide empty parts:
hide empty fields
hide empty methods

'You can find more examles at https://plantuml.com/class-diagram


node scan {

    class ScanProjectConfig {
        String projectId
        String key
        String value
    }
}


node administration{
    class Project {
        String projectId
        List<String> templates
    }
    
}

node eventBus as eventBus{
}

administration --> eventBus: REQUEST_ASSIGN_TEMPLATE_TO_PROJECT (1)

eventBus--> scan: REQUEST_ASSIGN_TEMPLATE_TO_PROJECT (2)

scan --> eventBus: RESULT_ASSIGN_TEMPLATE_TO_PROJECT (3)


note top of ScanProjectConfig
If the there exists already an entry for key "TEMPLATE_$templateType"
the config entry will be replaced. otherwise created.
end note

note top of administration
After template mapping result is returned by scan domain, 
the assigned template list will be updated.

If a failure happend - e.g. template with given id does 
not exist, the scan domain will return a failure
and this failure will be returned to caller side.
end note
@enduml
